--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <Spinner
-        android:id="@+id/spinner"
+    <NumberPicker
+        android:id="@+id/numberpicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -14,7 +14,7 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spinner"
+        android:layout_below="@+id/numberpicker"
         android:text="E" />
 
     <Button
