Style the button
Make it bigger and make it a circle

https://stackoverflow.com/q/9884202/399105

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- app:cornerRadius should always be half the width/height to ensure this is a circle -->
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:text="E"
+        android:textSize="50sp"
+        app:cornerRadius="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
