Wire up remaining note buttons using tags

--- a/app/src/main/res/layout/guitar_buttons.xml
+++ b/app/src/main/res/layout/guitar_buttons.xml
@@ -15,6 +15,7 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
+        android:tag="40"
         android:text="E"
         app:cornerRadius="25dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,6 +31,8 @@
         android:autoSizeTextType="uniform"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onPlayButtonClick"
+        android:tag="45"
         android:text="A"
         app:cornerRadius="25dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +48,8 @@
         android:autoSizeTextType="uniform"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onPlayButtonClick"
+        android:tag="50"
         android:text="D"
         app:cornerRadius="25dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +65,8 @@
         android:autoSizeTextType="uniform"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onPlayButtonClick"
+        android:tag="55"
         android:text="G"
         app:cornerRadius="25dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,6 +82,8 @@
         android:autoSizeTextType="uniform"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onPlayButtonClick"
+        android:tag="59"
         android:text="B"
         app:cornerRadius="25dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,6 +99,8 @@
         android:autoSizeTextType="uniform"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onPlayButtonClick"
+        android:tag="64"
         android:text="E"
         app:cornerRadius="25dp"
         app:layout_constraintEnd_toEndOf="parent"
