Move away from hard-coded button sizes
- Switch height to a percentage
- Calculate width using layout_constraintDimensionRatio
- Split the button icon into an ImageView so we have more options in controlling the size
- Put values in dimens.xml so they can be changed in one place
- Bump the corner radius to handle possible larger button sizes

--- a/app/src/main/res/layout/guitar_buttons.xml
+++ b/app/src/main/res/layout/guitar_buttons.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- app:cornerRadius should always be at least half the width/height to ensure this is a circle -->
     <Button
         android:id="@+id/button1"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:autoSizeTextType="uniform"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
@@ -17,95 +15,113 @@
         android:onClick="onPlayButtonClick"
         android:tag="40"
         android:text="E"
-        app:cornerRadius="100dp"
+        app:cornerRadius="@dimen/button_corner_radius"
+        app:layout_constraintBottom_toTopOf="@id/button2"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="@dimen/note_button_height_percent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
         android:id="@+id/button2"
-        android:backgroundTint="?colorSecondary"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/button_margin"
         android:autoSizeTextType="uniform"
+        android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="45"
         android:text="A"
-        app:cornerRadius="100dp"
+        app:cornerRadius="@dimen/button_corner_radius"
+        app:layout_constraintBottom_toTopOf="@id/button3"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="@dimen/note_button_height_percent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button1" />
 
     <Button
         android:id="@+id/button3"
-        android:backgroundTint="?colorSecondary"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/button_margin"
         android:autoSizeTextType="uniform"
+        android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="50"
         android:text="D"
-        app:cornerRadius="100dp"
+        app:cornerRadius="@dimen/button_corner_radius"
+        app:layout_constraintBottom_toTopOf="@id/button4"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="@dimen/note_button_height_percent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:backgroundTint="?colorSecondary"
-        android:layout_marginTop="10dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/button_margin"
         android:autoSizeTextType="uniform"
+        android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="55"
         android:text="G"
-        app:cornerRadius="100dp"
+        app:cornerRadius="@dimen/button_corner_radius"
+        app:layout_constraintBottom_toTopOf="@id/button5"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="@dimen/note_button_height_percent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:backgroundTint="?colorSecondary"
-        android:layout_marginTop="10dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/button_margin"
         android:autoSizeTextType="uniform"
+        android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="59"
         android:text="B"
-        app:cornerRadius="100dp"
+        app:cornerRadius="@dimen/button_corner_radius"
+        app:layout_constraintBottom_toTopOf="@id/button6"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="@dimen/note_button_height_percent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:backgroundTint="?colorSecondary"
-        android:layout_marginTop="10dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/button_margin"
         android:autoSizeTextType="uniform"
+        android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="64"
         android:text="E"
-        app:cornerRadius="100dp"
+        app:cornerRadius="@dimen/button_corner_radius"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="@dimen/note_button_height_percent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button5" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
