Fix note text autosizing on old versions of android

--- a/app/src/main/res/layout/guitar_buttons.xml
+++ b/app/src/main/res/layout/guitar_buttons.xml
@@ -8,13 +8,13 @@
         android:id="@+id/button1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:autoSizeTextType="uniform"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="40"
         android:text="E"
+        app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button2"
         app:layout_constraintDimensionRatio="1:1"
@@ -29,13 +29,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/button_margin"
-        android:autoSizeTextType="uniform"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="45"
         android:text="A"
+        app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button3"
         app:layout_constraintDimensionRatio="1:1"
@@ -49,13 +49,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/button_margin"
-        android:autoSizeTextType="uniform"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="50"
         android:text="D"
+        app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button4"
         app:layout_constraintDimensionRatio="1:1"
@@ -69,13 +69,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/button_margin"
-        android:autoSizeTextType="uniform"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="55"
         android:text="G"
+        app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button5"
         app:layout_constraintDimensionRatio="1:1"
@@ -89,13 +89,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/button_margin"
-        android:autoSizeTextType="uniform"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="59"
         android:text="B"
+        app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/button6"
         app:layout_constraintDimensionRatio="1:1"
@@ -109,13 +109,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/button_margin"
-        android:autoSizeTextType="uniform"
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:onClick="onPlayButtonClick"
         android:tag="64"
         android:text="E"
+        app:autoSizeTextType="uniform"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
