--- a/app/src/main/res/layout/instrument_buttons.xml
+++ b/app/src/main/res/layout/instrument_buttons.xml
@@ -11,7 +11,9 @@
         android:layout_height="0dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onInstrumentButtonClick"
         android:stateListAnimator="@null"
+        android:tag="@string/button_tag_guitar"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/instrument_button2"
         app:layout_constraintDimensionRatio="1:1"
@@ -40,7 +42,9 @@
         android:layout_marginTop="@dimen/button_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onInstrumentButtonClick"
         android:stateListAnimator="@null"
+        android:tag="@string/button_tag_ukelele"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/instrument_button3"
         app:layout_constraintDimensionRatio="1:1"
@@ -67,7 +71,9 @@
         android:layout_marginTop="@dimen/button_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onInstrumentButtonClick"
         android:stateListAnimator="@null"
+        android:tag="@string/button_tag_mandolin"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toTopOf="@id/instrument_button4"
         app:layout_constraintDimensionRatio="1:1"
@@ -94,7 +100,9 @@
         android:layout_marginTop="@dimen/button_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="onInstrumentButtonClick"
         android:stateListAnimator="@null"
+        android:tag="@string/button_tag_banjo"
         app:cornerRadius="@dimen/button_corner_radius"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
