Improve logic for stopping notes
- Stop all notes instead of just one so we don't have to track the last note (since we only ever want to play one at a time)
- Use just one timer and cancel it when a new note is played
- More refactoring of method names for clarity

--- a/app/src/main/res/layout/instrument_buttons.xml
+++ b/app/src/main/res/layout/instrument_buttons.xml
@@ -11,7 +11,7 @@
         android:layout_height="0dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="changeInstrument"
+        android:onClick="changePitchPipeInstrument"
         android:stateListAnimator="@null"
         android:tag="@string/button_tag_guitar"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -42,7 +42,7 @@
         android:layout_marginTop="@dimen/button_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="changeInstrument"
+        android:onClick="changePitchPipeInstrument"
         android:stateListAnimator="@null"
         android:tag="@string/button_tag_ukelele"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -71,7 +71,7 @@
         android:layout_marginTop="@dimen/button_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="changeInstrument"
+        android:onClick="changePitchPipeInstrument"
         android:stateListAnimator="@null"
         android:tag="@string/button_tag_mandolin"
         app:cornerRadius="@dimen/button_corner_radius"
@@ -100,7 +100,7 @@
         android:layout_marginTop="@dimen/button_margin"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="changeInstrument"
+        android:onClick="changePitchPipeInstrument"
         android:stateListAnimator="@null"
         android:tag="@string/button_tag_banjo"
         app:cornerRadius="@dimen/button_corner_radius"
