--- a/app/src/main/res/layout/note_buttons_guitar.xml
+++ b/app/src/main/res/layout/note_buttons_guitar.xml
@@ -11,7 +11,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playInstrumentNote"
+        android:onClick="playPitchPipeNote"
         android:tag="40"
         android:text="E"
         app:autoSizeTextType="uniform"
@@ -32,7 +32,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playInstrumentNote"
+        android:onClick="playPitchPipeNote"
         android:tag="45"
         android:text="A"
         app:autoSizeTextType="uniform"
@@ -52,7 +52,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playInstrumentNote"
+        android:onClick="playPitchPipeNote"
         android:tag="50"
         android:text="D"
         app:autoSizeTextType="uniform"
@@ -72,7 +72,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playInstrumentNote"
+        android:onClick="playPitchPipeNote"
         android:tag="55"
         android:text="G"
         app:autoSizeTextType="uniform"
@@ -92,7 +92,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playInstrumentNote"
+        android:onClick="playPitchPipeNote"
         android:tag="59"
         android:text="B"
         app:autoSizeTextType="uniform"
@@ -112,7 +112,7 @@
         android:backgroundTint="?colorSecondary"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:onClick="playInstrumentNote"
+        android:onClick="playPitchPipeNote"
         android:tag="64"
         android:text="E"
         app:autoSizeTextType="uniform"
