feat: Use long shadow for app icon
It still doesn't look great, but it looks better than the meh drop shadow

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -9,13 +9,22 @@
       android:translateY="32.4">
     <path
         android:pathData="m10.841,101.832h401.68c4.193,0 7.568,3.375 7.568,7.568v258.741c0,4.193 -3.375,7.568 -7.568,7.568L10.841,375.709c-4.193,0 -7.568,-3.375 -7.568,-7.568L3.273,109.4c0,-4.193 3.375,-7.568 7.568,-7.568zM211.451,457.291c48.556,-34.644 97.572,0.04 97.572,0.04m-97.572,0.04c48.556,34.644 97.572,-0.04 97.572,-0.04m0,0 l6.001,-73.652m-103.573,73.692 l-6.001,-73.652m-174.329,73.704c48.556,-34.644 97.572,0.04 97.572,0.04m-97.572,0.04c48.556,34.644 97.572,-0.04 97.572,-0.04m0,0 l6.001,-73.652M31.121,457.503 L25.12,383.851M298.137,27.443c48.556,-34.644 97.572,0.04 97.572,0.04m0,-0 l6.001,73.652M298.137,27.443 L292.135,101.095M118.935,26.816c48.556,-34.644 97.572,0.04 97.572,0.04m-97.572,-3.859zM118.935,22.997zM118.935,22.997zM216.507,26.856 L222.508,100.508m-103.573,-73.692 l-6.001,73.652m-96.929,1.364L407.359,101.832c7.053,0 12.731,5.678 12.731,12.731v248.415c0,7.053 -5.678,12.731 -12.731,12.731L16.004,375.709c-7.053,0 -12.731,-5.678 -12.731,-12.731L3.273,114.562c0,-7.053 5.678,-12.731 12.731,-12.731z"
-        android:strokeAlpha="0.333"
+        android:strokeAlpha="0"
         android:strokeLineJoin="round"
         android:strokeWidth="25"
         android:fillColor="#00000000"
         android:strokeColor="#000000"
-        android:fillAlpha="0.333"
+        android:fillAlpha="0"
         android:strokeLineCap="round"/>
+    <path
+        android:pathData="M403.648,12.656 L1026.704,635.712 629.171,1062.295 21.406,454.529 -6.116,98.279 114.673,89.105l13.761,-67.275 75.684,75.684 19.112,-5.351 3.058,-79.506 67.275,67.275 13.761,-59.63 81.8,81.8z"
+        android:strokeAlpha="0.1"
+        android:strokeLineJoin="miter"
+        android:strokeWidth="1"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"
+        android:fillAlpha="0.1"
+        android:strokeLineCap="butt"/>
     <group>
       <clip-path
           android:pathData="m118.935,16.816 l-6.001,73.652"/>
